--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
   redis:
     host: localhost
     port: 6379
+    #设置项目访问根路径
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
