--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Chronicle_Dawnlight</name>
     <description>Chronicle_Dawnlight</description>
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,14 +101,22 @@
     </dependencyManagement>
 
     <build>
+        <finalName>Chronicle_Dawnlight</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>17</source>
+                    <target>17</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
