--- a/pom.xml
+++ b/pom.xml
@@ -103,13 +103,13 @@
     <build>
         <finalName>Chronicle_Dawnlight</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--&lt;!&ndash;                    <testFailureIgnore>true</testFailureIgnore>&ndash;&gt;-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -127,7 +127,9 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>come.dawnlight.chronicle_dawnlight.ChronicleDawnlightApplication</mainClass>
-                    <skip>true</skip>
+<!--                    <skip>true</skip>-->
+                    <fork>true</fork> <!-- 如果没有该配置，devtools不会生效  打包 将外部jar包打包进项目中 -->
+                    <includeSystemScope>true</includeSystemScope> <!-- 打包 将外部jar包打包进项目中 -->
                 </configuration>
                 <executions>
                     <execution>
